Add autoformatter on build, and autoformat